--- a/apps/catalog-web/src/styles.css
+++ b/apps/catalog-web/src/styles.css
@@ -1,6 +1,11 @@
 /* https://raw.githubusercontent.com/franciscop/picnic/master/picnic.min.css*/
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
 html {
-  font-family: sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Lato, Roboto, 'Open Sans',
+    Helvetica, Arial, sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
@@ -176,7 +181,8 @@ th {
 }
 html,
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Lato, Roboto, 'Open Sans',
+    Helvetica, Arial, sans-serif;
   box-sizing: border-box;
   height: 100%;
 }
@@ -195,6 +201,7 @@ h3,
 h4,
 h5,
 h6 {
+  font-family: -apple-system, BlinkMacSystemFont, 'Montserrat', sans-serif;
   margin: 0;
   padding: 0.6em 0;
 }
