--- a/apps/catalog-web/src/app/app.component.html
+++ b/apps/catalog-web/src/app/app.component.html
@@ -5,4 +5,4 @@
 <main>
   <router-outlet></router-outlet>
 </main>
-<footer><a href="https://github.com/angularbuilders">By Angular.Builders</a></footer>
+<footer><a href="https://twitter.com/albertobasalo">By Alberto Basalo</a></footer>
