--- a/apps/catalog-web/src/app/app.component.html
+++ b/apps/catalog-web/src/app/app.component.html
@@ -1,6 +1,7 @@
 <header>
-  <h1>Angular Builders</h1>
-  <h2>{{ title }}</h2>
+  <h1>
+    <ab-ui-header-title [props]="{caption: title, icon:'🚧'}"></ab-ui-header-title>
+  </h1>
 </header>
 <main>
   <router-outlet></router-outlet>
