--- a/libs/domain/home/src/lib/ui/categories/categories.component.html
+++ b/libs/domain/home/src/lib/ui/categories/categories.component.html
@@ -1,5 +1,5 @@
 <section class="flex one two-600 three-1200">
-  <ab-ui-card *ngFor="let category of props"
+  <ab-ui-card *ngFor="let category of categories"
               [props]="{title:{ caption:category.name}, description:category.description, footer:''}">
   </ab-ui-card>
 </section>
