--- a/libs/shared/ui/src/lib/components/page-header/page-header.component.html
+++ b/libs/shared/ui/src/lib/components/page-header/page-header.component.html
@@ -1,5 +1,5 @@
 <header>
   <h2>
-    <ab-ui-header-title [props]="{caption:'Categories'}"></ab-ui-header-title>
+    <ab-ui-header-title [props]="props"></ab-ui-header-title>
   </h2>
 </header>
