--- a/libs/shared/ui/src/lib/components/header-title/header-title.component.html
+++ b/libs/shared/ui/src/lib/components/header-title/header-title.component.html
@@ -1,1 +1,1 @@
-<span>{{ props.icon }} {{ props.caption }}</span>
+<span>{{ props.icon }} <a [routerLink]="props.link">{{ props.caption }}</a></span>
