--- a/apps/catalog-web/src/app/app.component.html
+++ b/apps/catalog-web/src/app/app.component.html
@@ -1,7 +1,8 @@
 <header>
-  <h1>
-    <ab-ui-header-title [props]="{caption: title, icon:'🚧'}"></ab-ui-header-title>
-  </h1>
+  <h2>
+    <ab-ui-header-title [props]="{caption: title, icon:'🚧', link:'/'}"></ab-ui-header-title>
+  </h2>
+  <ab-tem-box></ab-tem-box>
 </header>
 <main>
   <router-outlet></router-outlet>
