--- a/apps/catalog-web/src/app/app.component.html
+++ b/apps/catalog-web/src/app/app.component.html
@@ -2,7 +2,7 @@
   <h2>
     <ab-ui-header-title [props]="{caption: title, icon:'🚧', link:'/'}"></ab-ui-header-title>
   </h2>
-  <ab-tem-box></ab-tem-box>
+  <ab-term-box></ab-term-box>
 </header>
 <main>
   <router-outlet></router-outlet>
