--- a/apps/catalog-web/src/app/app.component.html
+++ b/apps/catalog-web/src/app/app.component.html
@@ -1,6 +1,7 @@
 <header>
   <h2>
     <ab-ui-header-title [props]="{caption: title, icon:'🚧', link:'/'}"></ab-ui-header-title>
+    <a [routerLink]="['/add-item']"> ➕ Add Item</a>
     <ab-audit></ab-audit>
   </h2>
   <ab-term-box></ab-term-box>
