--- a/apps/catalog-web/src/styles.css
+++ b/apps/catalog-web/src/styles.css
@@ -1,6 +1,6 @@
-/* https://raw.githubusercontent.com/franciscop/picnic/master/picnic.min.css*/
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+https://raw.githubusercontent.com/franciscop/picnic/master/picnic.min.css
+  @import
+  url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 html {
