--- a/apps/catalog-web/src/app/app.component.html
+++ b/apps/catalog-web/src/app/app.component.html
@@ -4,9 +4,10 @@
     <a [routerLink]="['/add-item']"> ➕ Add Item</a>
     <ab-audit></ab-audit>
   </h2>
-  <ab-term-box></ab-term-box>
+  <ab-term-box abUiTrack="Search Box"></ab-term-box>
 </header>
 <main>
   <router-outlet></router-outlet>
 </main>
 <footer><a href="https://twitter.com/albertobasalo">By Alberto Basalo</a></footer>
+<!-- <input type="number" [(ngModel)]="edad" required min="18"  >  -->
