--- a/libs/shared/ui/src/lib/components/header-title/header-title.component.html
+++ b/libs/shared/ui/src/lib/components/header-title/header-title.component.html
@@ -1,1 +1,3 @@
-<span>{{ props.icon }} <a [routerLink]="props.link">{{ props.caption }}</a></span>
+<span>{{ props.icon }}
+  <a abUiTrack [routerLink]="props.link">{{ props.caption }}</a>
+</span>
