--- a/libs/shared/ui/src/lib/components/header-title/header-title.component.html
+++ b/libs/shared/ui/src/lib/components/header-title/header-title.component.html
@@ -1,5 +1,5 @@
 <span>{{ props.icon }}
   <a abUiTrack [routerLink]="props.link">
-    {{ props.caption | uppercase | truncate:3:'---' }}
+    {{ props.caption | uppercase | truncate:10 }}
   </a>
 </span>
